@@ -1,5 +1,6 @@
 0.9.54
 - Change position of studio/country etc tags to allow smart auto sizing
+- Add click/tap to close video OSD
 
 0.9.53
 - Options to disable/enable language/country/codec tags
